test_case/rust-lang_rust/31380_197986263_2.rs
 rust
// Should get errors for both 'Some' and 'None'
use std::option::Option::{Some, None}; //~ ERROR^2 unused import
